test/log/compare/vcmplt_vv_u16_m.txt
vcmplt_vv_u16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vcmplt_vv_u16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vcmplt_vv_u16_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vcmplt_vv_u16_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vcmplt_vv_u16_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vcmplt_vv_u16_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vcmplt_vv_u16_m.c:22:6: warning: no previous prototype for 'vcmplt_vv_u16_m_golden' [-Wmissing-prototypes]
   22 | void vcmplt_vv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vcmplt_vv_u16_m.c: In function 'vcmplt_vv_u16_m_golden':
vcmplt_vv_u16_m.c:24:25: error: 'TODO' undeclared (first use in this function)
   24 |         exp_result[i] = TODO;
      |                         ^~~~
vcmplt_vv_u16_m.c:24:25: note: each undeclared identifier is reported only once for each function it appears in
vcmplt_vv_u16_m.c:22:38: warning: unused parameter 'mask' [-Wunused-parameter]
   22 | void vcmplt_vv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                             ~~~~~~~~~^~~~
vcmplt_vv_u16_m.c:22:53: warning: unused parameter 'maskoff' [-Wunused-parameter]
   22 | void vcmplt_vv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                           ~~~~~~~~~~^~~~~~~
vcmplt_vv_u16_m.c:22:71: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vcmplt_vv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                                             ~~~~~~~~~~^
vcmplt_vv_u16_m.c:22:83: warning: unused parameter 'b' [-Wunused-parameter]
   22 | void vcmplt_vv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                                                         ~~~~~~~~~~^
vcmplt_vv_u16_m.c: In function 'main':
vcmplt_vv_u16_m.c:42:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   42 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vcmplt_vv_u16_m.c:48:28: error: incompatible type for argument 1 of 'vcmplt_vv_u16_m_golden'
   48 |     vcmplt_vv_u16_m_golden(exp_mask,exp_maskoff,exp_a,exp_b,exp_result);
      |                            ^~~~~~~~
      |                            |
      |                            uint64_t * {aka long long unsigned int *}
vcmplt_vv_u16_m.c:22:38: note: expected 'bool32_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vcmplt_vv_u16_m_golden(bool32_t mask,uint16_t *maskoff,uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                             ~~~~~~~~~^~~~
vcmplt_vv_u16_m.c:51:35: error: incompatible type for argument 2 of 'vcmplt_vv_u16_m'
   51 |     result = vcmplt_vv_u16_m(mask,maskoff,a,b);
      |                                   ^~~~~~~
      |                                   |
      |                                   uint16x32_t
In file included from vcmplt_vv_u16_m.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2641:1: note: expected 'bool32_t' but argument is of type 'uint16x32_t'
 2641 | __RUGRATS_CMP_VV_OP (cmplt, u, uint, uint, 16, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcmplt_vv_u16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vcmplt_vv_u16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vcmplt_vv_u16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcmplt_vv_u16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed